trying to fetch data from spotify API (not working yet)

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,3 +86,19 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+html, body {
+  scrollbar-width: none;
+  -ms-overflow-style: none; 
+}
+
+html::-webkit-scrollbar, 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
